@@ -2,7 +2,7 @@
   "name": "erm_zerg",
   "version": "1.21.0",
   "date": "2021-07-10",
-  "title": "ERM - Zerg Units",
+  "title": "ERM - Zerg / Garm Brood",
   "author": "heyqule",
   "description": "Add zerg as a new enemy force",
   "factorio_version": "1.1",
