@@ -52,8 +52,8 @@ erm_zerg/ultralisk_cavern=Ultralisk Cavern L__1__
 erm_zerg/nyduspit=Nyduspit L__1__
 erm_zerg/spore_colony=Spore Colony L__1__
 erm_zerg/spore_colony_shortrange=Short Range Spore Colony L__1__
-erm_zerg/sunker_colony=Sunker Colony L__1__
-erm_zerg/sunker_colony_shortrange=Short Range Sunker Colony L__1__
+erm_zerg/sunken_colony=sunken Colony L__1__
+erm_zerg/sunken_colony_shortrange=Short Range sunken Colony L__1__
 erm_zerg/overmind=Overmind L__1__
 erm_zerg/infested_cmd=Infested CC L__1__
 
