@@ -34,8 +34,8 @@ erm_zerg/ultralisk_cavern=Пещера ультралисков L__1__
 erm_zerg/nyduspit=Сеть Нидуса L__1__
 erm_zerg/spore_colony=Споровая колония L__1__
 erm_zerg/spore_colony_shortrange=Споровая колония ближнего радиуса L__1__
-erm_zerg/sunker_colony=Подземная колония L__1__
-erm_zerg/sunker_colony_shortrange=Подземная колония ближнего радиуса L__1__
+erm_zerg/sunken_colony=Подземная колония L__1__
+erm_zerg/sunken_colony_shortrange=Подземная колония ближнего радиуса L__1__
 
 
 [gui]
