@@ -34,8 +34,8 @@ erm_zerg/ultralisk_cavern=Печера Ультраліска L__1__
 erm_zerg/nyduspit=Мережа Нідуса L__1__
 erm_zerg/spore_colony=Спорова колонія L__1__
 erm_zerg/spore_colony_shortrange=Спороносна колонія короткого радіуса дії L__1__
-erm_zerg/sunker_colony=Підземна колонія L__1__
-erm_zerg/sunker_colony_shortrange=Підземна колонія малого радіуса дії L__1__
+erm_zerg/sunken_colony=Підземна колонія L__1__
+erm_zerg/sunken_colony_shortrange=Підземна колонія малого радіуса дії L__1__
 erm_zerg/overmind=Надрозум L__1__
 
 acid-cloud=Пастка
