@@ -138,7 +138,7 @@ function ErmZerg.make_broodling(level)
                 }
             },
 
-            distance_per_frame = 0.22,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
