@@ -209,7 +209,7 @@ function ErmZerg.make_defiler(level)
                 }
             },
 
-            distance_per_frame = 0.22,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
