@@ -157,7 +157,7 @@ function ErmZerg.make_drone(level)
                 }
             },
 
-            distance_per_frame = 0.22,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
