@@ -162,7 +162,7 @@ function ErmZerg.make_hydralisk(level)
                 }
             },
 
-            distance_per_frame = 0.17,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
