@@ -179,7 +179,7 @@ function ErmZerg.make_infested(level)
                 }
             },
 
-            distance_per_frame = 0.22,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
