@@ -136,7 +136,7 @@ function ErmZerg.make_zergling(level)
                     }
                 }
             },
-            distance_per_frame = 0.22,
+            distance_per_frame = 0.2,
             run_animation = {
                 layers = {
                     {
